crates/fig-lexer/tests/snapshots/integration_tests__integration__hash_map.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Interface
- Ident: Hasher
- Newline
- Indent
- Func
- Ident: hash
- LParen
- Star
- SelfLower
- Comma
- Ident: data
- Colon
- Star
- U8
- Comma
- Ident: len
- Colon
- USize
- RParen
- Arrow
- U64
- Newline
- Dedent
- Interface
- Ident: Map
- LBracket
- Ident: K
- Comma
- Ident: V
- RBracket
- Newline
- Indent
- Where
- Newline
- Indent
- Ident: K
- Colon
- Ident: Hash
- Plus
- Ident: Eq
- Newline
- Dedent
- Func
- Bang
- Ident: insert
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: key
- Colon
- Ident: K
- Comma
- Ident: value
- Colon
- Ident: V
- RParen
- Arrow
- Ident: ok
- Newline
- Func
- Ident: get
- LParen
- Star
- SelfLower
- Comma
- Ident: key
- Colon
- Star
- Ident: K
- RParen
- Arrow
- Question
- Star
- Ident: V
- Newline
- Func
- Bang
- Ident: remove
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: key
- Colon
- Star
- Ident: K
- RParen
- Arrow
- Question
- Ident: V
- Newline
- Func
- Ident: contains
- LParen
- Star
- SelfLower
- Comma
- Ident: key
- Colon
- Star
- Ident: K
- RParen
- Arrow
- Bool
- Newline
- Func
- Ident: len
- LParen
- Star
- SelfLower
- RParen
- Arrow
- USize
- Newline
- Func
- Ident: is_empty
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Bool
- Newline
- Dedent
- Struct
- Ident: HashMap
- LBracket
- Ident: K
- Comma
- Ident: V
- RBracket
- Newline
- Indent
- Where
- Newline
- Indent
- Ident: K
- Colon
- Ident: Hash
- Plus
- Ident: Eq
- Newline
- Dedent
- Ident: buckets
- Colon
- Star
- Mut
- Ident: Bucket
- LBracket
- Ident: K
- Comma
- Ident: V
- RBracket
- Newline
- Ident: bucket_count
- Colon
- USize
- Newline
- Ident: len
- Colon
- USize
- Newline
- Dedent
- Struct
- Ident: Bucket
- LBracket
- Ident: K
- Comma
- Ident: V
- RBracket
- Newline
- Indent
- Ident: key
- Colon
- Ident: K
- Newline
- Ident: value
- Colon
- Ident: V
- Newline
- Ident: next
- Colon
- Question
- Star
- Ident: Bucket
- LBracket
- Ident: K
- Comma
- Ident: V
- RBracket
- Newline
- Dedent
- Func
- Bang
- Ident: HashMap
- LBracket
- Ident: K
- Comma
- Ident: V
- RBracket
- ColonColon
- Ident: new
- LParen
- RParen
- Arrow
- Ident: HashMap
- LBracket
- Ident: K
- Comma
- Ident: V
- RBracket
- Newline
- Indent
- Where
- Newline
- Indent
- Ident: K
- Colon
- Ident: Hash
- Plus
- Ident: Eq
- Newline
- Dedent
- Pass
- Newline
- Dedent
- Func
- Bang
- Ident: HashMap
- LBracket
- Ident: K
- Comma
- Ident: V
- RBracket
- ColonColon
- Ident: insert
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: key
- Colon
- Ident: K
- Comma
- Ident: value
- Colon
- Ident: V
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Where
- Newline
- Indent
- Ident: K
- Colon
- Ident: Hash
- Plus
- Ident: Eq
- Newline
- Dedent
- Pass
- Newline
- Dedent
- Func
- Ident: HashMap
- LBracket
- Ident: K
- Comma
- Ident: V
- RBracket
- ColonColon
- Ident: get
- LParen
- Star
- SelfLower
- Comma
- Ident: key
- Colon
- Star
- Ident: K
- RParen
- Arrow
- Question
- Star
- Ident: V
- Newline
- Indent
- Where
- Newline
- Indent
- Ident: K
- Colon
- Ident: Hash
- Plus
- Ident: Eq
- Newline
- Dedent
- Pass
- Newline
- Dedent
