crates/fig-lexer/tests/snapshots/integration_tests__integration__linked_list.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Struct
- Ident: Node
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Ident: value
- Colon
- Ident: T
- Newline
- Ident: next
- Colon
- Question
- Star
- Mut
- Ident: Node
- LBracket
- Ident: T
- RBracket
- Newline
- Dedent
- Struct
- Ident: LinkedList
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Ident: head
- Colon
- Question
- Star
- Mut
- Ident: Node
- LBracket
- Ident: T
- RBracket
- Newline
- Ident: len
- Colon
- USize
- Newline
- Dedent
- Func
- Bang
- Ident: LinkedList
- LBracket
- Ident: T
- RBracket
- ColonColon
- Ident: new
- LParen
- RParen
- Arrow
- Ident: LinkedList
- LBracket
- Ident: T
- RBracket
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Bang
- Ident: LinkedList
- LBracket
- Ident: T
- RBracket
- ColonColon
- Ident: push_front
- LParen
- Star
- Mut
- SelfLower
- Comma
- Ident: value
- Colon
- Ident: T
- RParen
- Arrow
- Ident: ok
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Bang
- Ident: LinkedList
- LBracket
- Ident: T
- RBracket
- ColonColon
- Ident: pop_front
- LParen
- Star
- Mut
- SelfLower
- RParen
- Arrow
- Question
- Ident: T
- Newline
- Indent
- Pass
- Newline
- Dedent
- Func
- Ident: LinkedList
- LBracket
- Ident: T
- RBracket
- ColonColon
- Ident: len
- LParen
- Star
- SelfLower
- RParen
- Arrow
- USize
- Newline
- Indent
- Return
- SelfLower
- Dot
- Ident: len
- Newline
- Dedent
- Func
- Ident: LinkedList
- LBracket
- Ident: T
- RBracket
- ColonColon
- Ident: is_empty
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Bool
- Newline
- Indent
- Return
- SelfLower
- Dot
- Ident: len
- EqEq
- IntegerLiteral:
    base: Decimal
    digits: "0"
    suffix: ~
- Newline
- Dedent
- Func
- Ident: LinkedList
- LBracket
- Ident: T
- RBracket
- ColonColon
- Ident: peek_front
- LParen
- Star
- SelfLower
- RParen
- Arrow
- Question
- Star
- Ident: T
- Newline
- Indent
- Pass
- Newline
- Dedent
